# lai_tools

./: .gitignore  .gitmodules  .travis.yml  README.md  meson.build
.github/workflows/: main.yml
aml_regressions/: itay_buffer_resolution.asl  qookie_deref_index.asl  qookie_store_index.asl  thomtl_ifblock.asl  thomtl_resolution.asl
aml_tests/: arithmetic.asl  bankfield.asl  break.asl  breakpoint.asl  bufferfields.asl  calls.asl  comparison.asl  computational_data.asl  concatenate.asl  concatrestemplate.asl  continue.asl  duplicate_node.asl  event.asl  external.aml  external.asl  fatal.asl  field.asl  findsetbit.asl  frombcd.asl  hello.asl  implicit.asl  implicit_conversion.asl  implicit_semantics.asl  index.asl  indexfield.asl  match.asl  mid.asl  mutex.asl  negatebitwise.asl  objecttype.asl  opregion.asl  package.asl  power_res.asl  processor.asl  references.asl  revision.asl  run.py  scopes.asl  timer.asl  tobcd.asl  (+9 more)
boot_image/: .bochsrc  .gitignore  GNUmakefile  Makefile  acpi.c  acpi.h  bit.h  build.sh  cio.h  dir2fat32.sh  entry.c  idt.c  idt.h  lai  lai.c  limine.cfg  linker.ld  pci.c  pic.c  pic.h  pmm.c  pmm.h  print.c
boot_image/bootloader/: Makefile  bootloader.asm
boot_image/bootloader/includes/: disk.inc  gdt.inc
boot_image/kernel/: GNUmakefile  Makefile  cio.h  entry.c  lai  lai.c  linker.ld  pci.h  pic.h  pmm.c  pmm.h  print.c
boot_image/kernel/asm/: gdt.asm  idt.asm  isr.asm
boot_image/kernel/include/: acpi.h  cio.h  kernel.h  keyboard.h  klib.h  mm.h  panic.h  pci.h  prompt.h  serial.h  system.h
boot_image/kernel/src/: acpi.c  entry.c  idt.c  init.c  klib.c  lai  lai.c  pmm.c  pmm.h  print.c  print.h  prompt.c  time.c
boot_image/kernel/src/drivers/: acpi.c  e820.c  exceptions.c  graphics.c  keyboard.c  panic.c  pci.c  pic.c  serial.c  tty.c  vbe_tty.c  vga_textmode.c
boot_image/kernel/src/mm/: pmm.c  vmm.c
boot_image/kernel/startup/: boot.asm  startup.asm
common/: laihost.c
laiexec/: main.c
